# egui-video

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  frame0.ppm  frame1.ppm  frame2.ppm  frame3.ppm  frame4.ppm  frame5.ppm
examples/: main.rs  stream.rs
src/: lib.rs  main.rs
src/subtitle/: ass.rs  mod.rs
