[package]
name = "egui-video"
version = "0.5.2"
edition = "2021"
license = "MIT"
description = "a video library for egui"
repository = "https://github.com/n00kii/egui-video"
readme = "README.md"
authors = ["n00kii"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sdl2/bundled"]
from_bytes = ["dep:tempfile"]
# will compile sdl2 for you if you do not have it
# this may require other dependancies (see https://github.com/Rust-SDL2/rust-sdl2#bundled-feature)
sdl2-bundled = ["sdl2/bundled"]

[dependencies]
egui = "0.23.0"
atomic = "0.5.3"
ffmpeg-the-third = "1.2.2"
anyhow = "1.0.66"
timer = "0.2.0"
chrono = "0.4.22"
tempfile = { version = "3.3.0", optional = true }
sdl2 = { version = "0.35.2" }
ringbuf = "0.3.1"
parking_lot = "0.12.1"
itertools = "0.10.5"
nom = "7.1.3" 

[dev-dependencies]
rfd = "0.11.0"
eframe = "0.23.0"
