[package]
name = "egui-video"
version = "0.9.0"
edition = "2021"
license = "MIT"
description = "a video library for egui"
repository = "https://github.com/n00kii/egui-video"
readme = "README.md"
authors = ["n00kii"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sdl2/bundled"]
from_bytes = ["dep:tempfile"]
# will compile sdl2 for you if you do not have it
# this may require other dependancies (see https://github.com/Rust-SDL2/rust-sdl2#bundled-feature)
sdl2-bundled = ["sdl2/bundled"]
eframe = ["dep:eframe"]

[dependencies]
egui = "0.30.0"
eframe = { version = "0.30.0", optional = true }
atomic = "0.6.0"
bytemuck = { version = "1.21.0", features = ["derive"]}
ffmpeg-the-third = "2.0.1"
anyhow = "1.0.95"
timer = "0.2.0"
chrono = "0.4.39"
tempfile = { version = "3.15.0", optional = true }
sdl2 = { version = "0.37.0" }
ringbuf = "0.4.7"
parking_lot = "0.12.3"
nom = "7.1.3"

[dev-dependencies]
rfd = "0.15.0"
eframe = "0.30.0"
